Fix copyright in the README file

--- a/README
+++ b/README
@@ -1,4 +1,6 @@
-The corresponding files are licensed as per the included LICENSE file.
-    Copyright (C) 2006-2009, Aaron Griffin <aaronmgriffin@gmail.com>
-    Copyright (C) 2006, Tobias Powalowski <tpowa@archlinux.org>
+The corresponding files are licensed under the GNU General Public License, version 2
+as per the included LICENSE file.
+    Copyright (C) 2006-2010, Thomas Bächler <thomas@archlinux.org>
+                             Aaron Griffin <aaronmgriffin@gmail.com>
+                             Tobias Powalowski <tpowa@archlinux.org>
 
