--- a/README
+++ b/README
@@ -1,6 +1,7 @@
 The corresponding files are licensed under the GNU General Public License, version 2
 as per the included LICENSE file.
-    Copyright (C) 2006-2010, Thomas Bächler <thomas@archlinux.org>
+    Copyright (C) 2006-2011, Thomas Bächler <thomas@archlinux.org>
                              Aaron Griffin <aaronmgriffin@gmail.com>
                              Tobias Powalowski <tpowa@archlinux.org>
+                             Dave Reisner <d@falconindy.com>
 
