README: fix email address

--- a/README
+++ b/README
@@ -3,5 +3,5 @@ as per the included LICENSE file.
     Copyright (C) 2006-2011, Thomas Bächler <thomas@archlinux.org>
                              Aaron Griffin <aaronmgriffin@gmail.com>
                              Tobias Powalowski <tpowa@archlinux.org>
-                             Dave Reisner <d@falconindy.com>
+                             Dave Reisner <dreisner@archlinux.org>
 
