[README] Add grazzolini to the copyright

--- a/README
+++ b/README
@@ -4,4 +4,5 @@ as per the included LICENSE file.
                              Aaron Griffin <aaronmgriffin@gmail.com>
                              Tobias Powalowski <tpowa@archlinux.org>
                              Dave Reisner <dreisner@archlinux.org>
+                             Giancarlo Razzolini <grazzolini@archlinux.org>
 
