--- a/man/mkinitcpio.conf.5.adoc
+++ b/man/mkinitcpio.conf.5.adoc
@@ -18,7 +18,10 @@ _/etc/mkinitcpio.conf_
 
 mkinitcpio will attempt to read from a configuration file each time it is
 invoked, _/etc/mkinitcpio.conf_ by default. This file defines several variables
-which describe the contents of the image to be generated.
+which describe the contents of the image to be generated. In addition to the "main"
+configuration file, drop-in configuration snippets are read
+from _/etc/mkinitcpio.conf.d/*.conf_. These drop-ins have higher precedence and
+override the main configuration file.
 
 == Variables
 
