--- a/man/mkinitcpio.8.adoc
+++ b/man/mkinitcpio.8.adoc
@@ -494,13 +494,15 @@ A more thorough article on configuring mkinitcpio:
 
 Bugs
 ----
-Upon writing this manpage, there were no noticeable bugs present. Please visit
-<http://bugs.archlinux.org/> for an up to date list.
+Upon writing this man page, there were no noticeable bugs present. Please visit
+<https://gitlab.archlinux.org/archlinux/mkinitcpio/mkinitcpio/-/issues> for an
+up to date list.
 
 Authors
 -------
-mkinitcpio is created and maintained by the Arch Linux Developer community.
+mkinitcpio is maintained by the Arch Linux community. Refer to the 'AUTHORS'
+file for a full list of contributors.
 
 Copyright
 ---------
-Copyright (c) Arch Linux 2006-2021
+Copyright 🄯 mkinitcpio contributors. GPL-2.0-only.
